<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="mt_msg_type_cluster">Cluster</string>
    <string name="mt_msg_type_rolling">Rolling</string>
    <string name="mt_msg_type_fat">Fat</string>
    <string name="mt_msg_type_system">System</string>
    <string name="mt_msg_type_pending_others">Pending others</string>
    <string name="mt_msg_type_pending_system">Pending system</string>
</resources>