<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000"
    android:padding="8dp">

    <ImageView
        android:id="@+id/buttonClose"
        android:layout_width="@dimen/mt_msg_dashboard_button_size"
        android:layout_height="@dimen/mt_msg_dashboard_button_size"
        android:src="@drawable/mt_ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/buttonDetail"
        android:layout_width="@dimen/mt_msg_dashboard_button_size"
        android:layout_height="@dimen/mt_msg_dashboard_button_size"
        android:layout_marginEnd="@dimen/mt_msg_dashboard_button_spacing"
        android:src="@drawable/mt_ic_arrow_forward"
        app:layout_constraintEnd_toStartOf="@+id/buttonClose"
        app:layout_constraintTop_toTopOf="@+id/buttonClose" />

    <View
        android:id="@+id/squareSystem"
        android:layout_width="@dimen/mt_msg_dashboard_square_size"
        android:layout_height="@dimen/mt_msg_dashboard_square_size"
        android:layout_marginTop="8dp"
        android:background="@color/mt_msg_type_system"
        android:nestedScrollingEnabled="@+id/textSystem"
        app:layout_constraintEnd_toStartOf="@+id/textSystem"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDetail" />

    <TextView
        android:id="@+id/textSystem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mt_msg_dashboard_square_label_spacing"
        android:text="@string/mt_msg_type_system"
        android:textColor="@color/mt_msg_type_text_color"
        android:textSize="@dimen/mt_msg_dashboard_msg_type_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/squareSystem"
        app:layout_constraintEnd_toStartOf="@+id/squareRolling"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/squareSystem"
        app:layout_constraintTop_toTopOf="@+id/squareSystem" />

    <View
        android:id="@+id/squareRolling"
        android:layout_width="@dimen/mt_msg_dashboard_square_size"
        android:layout_height="@dimen/mt_msg_dashboard_square_size"
        android:layout_marginStart="@dimen/mt_msg_dashboard_msg_type_spacing"
        android:background="@color/mt_msg_type_rolling"
        android:nestedScrollingEnabled="@+id/textRolling"
        app:layout_constraintEnd_toStartOf="@+id/textRolling"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/textSystem"
        app:layout_constraintTop_toTopOf="@+id/squareSystem" />

    <TextView
        android:id="@+id/textRolling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mt_msg_dashboard_square_label_spacing"
        android:text="@string/mt_msg_type_rolling"
        android:textColor="@color/mt_msg_type_text_color"
        android:textSize="@dimen/mt_msg_dashboard_msg_type_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/squareRolling"
        app:layout_constraintEnd_toStartOf="@+id/squareFat"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/squareRolling"
        app:layout_constraintTop_toTopOf="@+id/squareRolling" />

    <View
        android:id="@+id/squareFat"
        android:layout_width="@dimen/mt_msg_dashboard_square_size"
        android:layout_height="@dimen/mt_msg_dashboard_square_size"
        android:layout_marginStart="@dimen/mt_msg_dashboard_msg_type_spacing"
        android:background="@color/mt_msg_type_fat"
        app:layout_constraintEnd_toStartOf="@+id/textFat"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/textRolling"
        app:layout_constraintTop_toTopOf="@+id/squareRolling" />

    <TextView
        android:id="@+id/textFat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mt_msg_dashboard_square_label_spacing"
        android:text="@string/mt_msg_type_fat"
        android:textColor="@color/mt_msg_type_text_color"
        android:textSize="@dimen/mt_msg_dashboard_msg_type_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/squareFat"
        app:layout_constraintEnd_toStartOf="@+id/squareCluster"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/squareFat"
        app:layout_constraintTop_toTopOf="@+id/squareFat" />

    <View
        android:id="@+id/squareCluster"
        android:layout_width="@dimen/mt_msg_dashboard_square_size"
        android:layout_height="@dimen/mt_msg_dashboard_square_size"
        android:layout_marginStart="@dimen/mt_msg_dashboard_msg_type_spacing"
        android:background="@color/mt_msg_type_cluster"
        app:layout_constraintEnd_toStartOf="@+id/textCluster"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/textFat"
        app:layout_constraintTop_toTopOf="@+id/squareFat" />

    <TextView
        android:id="@+id/textCluster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mt_msg_dashboard_square_label_spacing"
        android:text="@string/mt_msg_type_cluster"
        android:textColor="@color/mt_msg_type_text_color"
        android:textSize="@dimen/mt_msg_dashboard_msg_type_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/squareCluster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/squareCluster"
        app:layout_constraintTop_toTopOf="@+id/squareCluster" />

    <indie.riki.msgtracer.dashboard.HistoricalMsgGraph
        android:id="@+id/msgGraph"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCluster" />

</androidx.constraintlayout.widget.ConstraintLayout>